  . Fixed bug #47168 (printf of floating point variable prints maximum of 40 
    decimal places). (Ilia)
  . Fixed bug #46587 (mt_rand() does not check that max is greater than min).
    (Ilia)  
  . Fixed #53409 (sleep() returns NULL on Windows). (Pierre)

- Curl extension:
  . Fixed bug #52828 (curl_setopt does not accept persistent streams).
    (Gustavo, Ilia)

- DOM extension:
  . Fixed bug #52656 (DOMCdataSection does not work with splitText). (Ilia)

- Hash extension:
  . Fixed bug #51003 (unaligned memory access in ext/hash/hash_tiger.c).
    (Mike, Ilia)
    
- Intl extension:
  . Fixed crashes on invalid parameters in intl extension. (Stas, Maksymilian
    Arciemowicz)
  . Added support for formatting the timestamp stored in a DateTime object.
    (Stas)

- Phar extension:
  . Fixed bug #50987 (unaligned memory access in phar.c).
    (geissert at debian dot org, Ilia)
   
- Reflection extension:
  . Fixed bug #53366 (Reflection doesnt get dynamic property value from
    getProperty()). (Felipe)
  . Fixed bug #52854 (ReflectionClass::newInstanceArgs does not work for classes
    without constructors). (Johannes)
      
- SPL extension:
  . Fixed bug #53362 (Segmentation fault when extending SplFixedArray). (Felipe)

18 Nov 2010, PHP 5.3.4RC1
- Upgraded bundled Sqlite3 to version 3.7.3. (Ilia)
- Upgraded bundled PCRE to version 8.10. (Ilia)

- Security enhancements:
  . Fixed crash in zip extract method (possible CWE-170). 
    (Maksymilian Arciemowicz, Pierre)
  . Paths with NULL in them (foo\0bar.txt) are now considered as invalid. (Rasmus)
  . Fixed a possible double free in imap extension (Identified by Mateusz 
    Kocielski). (CVE-2010-4150). (Ilia)
  . Fixed NULL pointer dereference in ZipArchive::getArchiveComment.
    (CVE-2010-3709). (Maksymilian Arciemowicz)
  . Fixed possible flaw in open_basedir (CVE-2010-3436). (Pierre)
  . Fixed MOPS-2010-24, fix string validation. (CVE-2010-2950). (Pierre)