@@ -17,6 +17,7 @@
 - Curl extension:
   . Fixed bug #52828 (curl_setopt does not accept persistent streams).
     (Gustavo, Ilia)
+  . Fixed bug #52202 (CURLOPT_PRIVATE gets corrupted). (Ilia)
 
 - DOM extension:
   . Fixed bug #52656 (DOMCdataSection does not work with splitText). (Ilia)
